filtering viewmodel cleaning - part 1

--- a/RepositoryParser/RepositoryParser/View/FilteringView.xaml
+++ b/RepositoryParser/RepositoryParser/View/FilteringView.xaml
@@ -77,8 +77,8 @@
                       VerticalAlignment="Stretch"
                       HorizontalAlignment="Stretch" 
                       Margin="5,0"
-                      ItemsSource="{Binding LocalCollection}" 
-                      SelectedItem="{Binding ComboBoxSelectedItem}"
+                      ItemsSource="{Binding AuthorsCollection}" 
+                      SelectedItem="{Binding AuthorsSelectedItem}"
                       IsSynchronizedWithCurrentItem="True" 
                       BorderThickness="0"
                       ItemContainerStyle="{StaticResource RepositoryAnalyserListViewItem}"
