--- a/RepositoryParser/RepositoryParser.Controls/ImageButton/ImageButton.xaml
+++ b/RepositoryParser/RepositoryParser.Controls/ImageButton/ImageButton.xaml
@@ -76,6 +76,11 @@
                                 </Trigger.EnterActions>
                             </Trigger>
 
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Opacity" Value="0.9"/>
+                                <Setter Property="Background" Value="#666666" TargetName="Border"/>
+                            </Trigger>
+                            
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter 
                                     TargetName="ControlImage" 
