--- a/RepositoryParser/RepositoryParser/View/ChartOfChangesView.xaml
+++ b/RepositoryParser/RepositoryParser/View/ChartOfChangesView.xaml
@@ -3,15 +3,57 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                      xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
+        xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
         xmlns:resw="clr-namespace:RepositoryParser.Properties"
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+        xmlns:extensions="clr-namespace:RepositoryParser.Controls.Extensions;assembly=RepositoryParser.Controls"
         mc:Ignorable="d"
-         Title="{x:Static resw:Resources.ChartOfChangesView}" Height="700" Width="700"
+        Title="{x:Static resw:Resources.ChartOfChangesView}" Height="700" Width="700"
         DataContext="{Binding Source={StaticResource Locator}, Path=ChartOfChanges}"
         ResizeMode="NoResize"
         Icon="../Assets/Icons/Chart_Icon_Main.png"
         >
+    <controls:MetroWindow.TitleTemplate>
+        <DataTemplate>
+            <TextBlock
+                Text="REPOSITORY ANALYSER - CHART OF CHANGES"
+                FontSize="16"
+                FontWeight="DemiBold"
+                Foreground="{StaticResource Graphite}"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Margin="5"/>
+        </DataTemplate>
+    </controls:MetroWindow.TitleTemplate>
+
+    <controls:MetroWindow.WindowTitleBrush>
+        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1" Opacity="0.35">
+            <GradientStop Color="{StaticResource AccentColor}" Offset="0.0"/>
+            <GradientStop Color="White" Offset="1"></GradientStop>
+        </LinearGradientBrush>
+    </controls:MetroWindow.WindowTitleBrush>
+
+    <controls:MetroWindow.NonActiveWindowTitleBrush>
+        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1" Opacity="0.35">
+            <GradientStop Color="#5d5d5d" Offset="0.0"/>
+            <GradientStop Color="White" Offset="1"></GradientStop>
+        </LinearGradientBrush>
+    </controls:MetroWindow.NonActiveWindowTitleBrush>
+
+    <controls:MetroWindow.IconTemplate>
+        <DataTemplate>
+            <Border Width="{TemplateBinding Width}"
+                 Height="{TemplateBinding Height}"
+                 Padding="4,0,8,0"
+                 Margin="10,0,0,0"
+                 Background="Transparent"
+                 RenderOptions.EdgeMode="Aliased"
+                 RenderOptions.BitmapScalingMode="HighQuality">
+                <Path Width="25" Height="25" Stretch="Fill" Fill="{StaticResource Graphite}" Data="F1 M 22.3908,33.9299L 34.0851,45.6243L 29.7767,49.9327L 18.0823,38.2384L 22.3908,33.9299 Z M 17.1591,37.3152L 14.6971,35.3402C 13.9076,34.5507 14.2153,32.873 15.0049,32.0835L 16.2359,30.8525C 17.0254,30.063 18.5238,29.7552 19.3133,30.5447L 21.4675,33.0067L 17.1591,37.3152 Z M 35.9418,52.3947L 30.6999,50.856L 35.0084,46.5475L 36.4473,51.8893L 35.9418,52.3947 Z M 39.9167,15.8333C 42.1028,15.8333 44.25,17.8139 44.25,20L 44,21L 56,21L 56,57L 24,57L 24,47.75L 27,50.75L 27,54L 53,54L 53,24L 47.5,24L 49.5,28L 30.5,28L 32.5,24L 27,24L 27,35.5L 24,32L 24,21L 36,21L 35.75,20C 35.75,17.8139 37.7305,15.8333 39.9167,15.8333 Z M 39.9166,18.2084C 39.0422,18.2084 38,18.8756 38,19.75C 38,20.0384 38.3653,20.7671 38.5,21L 41.5,21C 41.6347,20.7671 42,20.0384 42,19.75C 42,18.8756 40.7911,18.2084 39.9166,18.2084 Z "/>
+            </Border>
+        </DataTemplate>
+    </controls:MetroWindow.IconTemplate>
+    
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="15"/>
@@ -58,6 +100,7 @@
                       AutoGenerateColumns="False"
                       ColumnWidth="auto"
                       IsReadOnly="True"
+                      extensions:DataGridExtensions.LastColumnFill="True"
                       >
                     <DataGrid.Columns>
                         <DataGridTextColumn Binding="{Binding Key}" Header="{x:Static resw:Resources.TypeOfChange}"/>
