New db engine - part 4 (DayActivity analyse)

--- a/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityContentProviderView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityContentProviderView.xaml
@@ -8,12 +8,13 @@
              xmlns:viewModel="clr-namespace:RepositoryParser.ViewModel"
              xmlns:resw="clr-namespace:RepositoryParser.Properties"
              xmlns:imageButton="clr-namespace:RepositoryParser.Controls.ImageButton;assembly=RepositoryParser.Controls"
+             xmlns:dayActivityViewModels="clr-namespace:RepositoryParser.ViewModel.DayActivityViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="600"
              DataContext="{Binding Source={StaticResource Locator}, Path=DayActivityContentProvider }"
              >
     <UserControl.Resources>
-        <DataTemplate DataType="{x:Type viewModel:DayActivityViewModel}">
+        <DataTemplate DataType="{x:Type dayActivityViewModels:DayActivityViewModel}">
             <local:DayActivityChartView/>
         </DataTemplate>
 
