--- a/RepositoryParser/RepositoryParser/View/FilteringView.xaml
+++ b/RepositoryParser/RepositoryParser/View/FilteringView.xaml
@@ -98,7 +98,7 @@
                       Margin="5,0"
                       ItemsSource="{Binding AuthorsCollection}" 
                       SelectedItem="{Binding AuthorsSelectedItem}"
-                      IsSynchronizedWithCurrentItem="True" 
+                      IsSynchronizedWithCurrentItem="False" 
                       BorderThickness="0"
                       ItemContainerStyle="{StaticResource RepositoryAnalyserListViewItem}"
                       Foreground="Black"
